; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_debug.c_oslog_is_safe.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_debug.c_oslog_is_safe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kernel_debugger_entry_count = common dso_local global i64 0, align 8
@not_in_kdp = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @oslog_is_safe() #0 {
  %1 = load i64, i64* @kernel_debugger_entry_count, align 8
  %2 = icmp eq i64 %1, 0
  br i1 %2, label %3, label %13

3:                                                ; preds = %0
  %4 = load i32, i32* @not_in_kdp, align 4
  %5 = icmp eq i32 %4, 1
  br i1 %5, label %6, label %13

6:                                                ; preds = %3
  %7 = call i64 (...) @get_preemption_level()
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %6
  %10 = call i64 (...) @ml_get_interrupts_enabled()
  %11 = load i64, i64* @TRUE, align 8
  %12 = icmp eq i64 %10, %11
  br label %13

13:                                               ; preds = %9, %6, %3, %0
  %14 = phi i1 [ false, %6 ], [ false, %3 ], [ false, %0 ], [ %12, %9 ]
  %15 = zext i1 %14 to i32
  ret i32 %15
}

declare dso_local i64 @get_preemption_level(...) #1

declare dso_local i64 @ml_get_interrupts_enabled(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
